# legged_control_zidong

./: Ros_Gazebo_diagram.pptx  command_line.txt  structure  新建 Microsoft PowerPoint 演示文稿.pptx
.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
src/: Ros_control_link  file  file_structure.yaml  gazebo+ros  legged_common_note  legged_control_note  legged_controllers_note  legged_estimation_note  legged_examples_note  legged_gazebo_note  legged_hw_note  legged_interface_note  legged_wbc_note  undo_files
src/humanoid_gazebo/: CMakeLists.txt
src/humanoid_gazebo/config/: default.yaml
src/legged_common/scripts/: .generate_urdf.sh.swp
src/legged_controllers/config/a1/: gait.info  reference.info  task.info
src/legged_controllers/launch/: load_controller.launch
src/legged_controllers/src/: LeggedController.cpp  TargetTrajectoriesPublisher.cpp
src/legged_estimation/src/: LinearKalmanFilter.cpp  StateEstimateBase.cpp
src/legged_examples/humanoid/humanoid_description/: CMakeLists.txt  package.xml
src/legged_examples/humanoid/humanoid_description/launch/: empty_world.launch
src/legged_examples/humanoid/humanoid_description/urdf/: humanoid.urdf  robot.xacro
src/legged_examples/humanoid/humanoid_description/urdf/common/: leg.xacro
src/legged_gazebo/config/: default.yaml
src/legged_gazebo/src/: LeggedHWSim.cpp
src/legged_hw/src/: LeggedHW.cpp
src/legged_interface/src/: LeggedInterface.cpp
src/legged_wbc/src/: WbcBase.cpp  WeightedWbc.cpp
src/ocs2_robotic_assets/: CMakeLists.txt
(+30 files in other folders)
